# prompts

./: .coverage  .editorconfig  .gitignore  .kilocodemodes  .kiloignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Feature Backlog  README.md  create_prd.py  pyproject.toml
.github/scripts/: calculate_version.py
.github/workflows/: ci-cd.yml
.kilo/rules/: core-conventions-py.md  core-conventions.md  core-session.md
.kilo/rules-architect/: data-model.md  scaffold.md  task-breakdown.md
.kilo/rules-ask/: docs.md  testing.md
.kilo/rules-code/: boilerplate.md  house-style.md
.kilo/rules-compliance/: review.md
.kilo/rules-debug/: root-cause.md
.kilo/rules-document/: strategy.md
.kilo/rules-enforcement/: enforcement.md
.kilo/rules-explain/: strategy.md
.kilo/rules-migration/: code-dependency-upgrade.md  code-migration.md  strategy.md
.kilo/rules-orchestrator/: devops.md  meta.md
.kilo/rules-planning/: planning.md
.kilo/rules-refactor/: code-refactor.md  strategy.md
.kilo/rules-review/: accessibility.md  code.md  performance.md
.kilo/rules-security/: review.md
.kilo/rules-test/: strategy.md
.kilocode/rules/: conventions-python.md  conventions-typescript.md  conventions.md  core-session.md  system.md
.opencode/rules/: _base.md  architect.md  ask.md  code.md  debug.md  orchestrator.md
.promptosaurus/: .promptosaurus.yaml  configurations.yaml
.prompty/: configurations.yaml
docs/: architecture.md  ci-cd-setup.md  derived-versioning.md  mode-editing-permissions-analysis.md  ui-architecture-redesign.md  ui-proposed-structure.md
docs/ard/: cli-switch-update-commands.md  multi-language-monorepo-support.md  session-context-persistence.md
docs/prd/: cli-switch-update-commands.md  multi-language-monorepo-support.md  session-context-persistence.md
plans/: kilo-builder-cli-ide-targets.md
promptcli/: __init__.py  cli.py  config.py  p  registry.py
promptcli/builders/: __init__.py  _concat.py  builder.py  cline.py  copilot.py  cursor.py  kilo.py
promptcli/prompts/: architect-scaffold.md  architect-task-breakdown.md  ask-decision-log.md  ask-testing.md  code-dependency-upgrade.md  code-feature.md  code-house-style.md  code-migration.md  code-refactor.md  coding-enforcement.md  compliance-review.md  core-conventions-c.md  core-conventions-clojure.md  core-conventions-cpp.md  core-conventions-cs.md  core-conventions-dart.md  core-conventions-elixir.md  core-conventions-elm.md  core-conventions-fsharp.md  core-conventions-go.md  core-conventions-groovy.md  core-conventions-haskell.md  core-conventions-java.md  core-conventions-js.md  core-conventions-julia.md  core-conventions-kotlin.md  core-conventions-lua.md  core-conventions-objc.md  core-conventions-php.md  core-conventions-py.md  core-conventions-r.md  core-conventions-ruby.md  core-conventions-rust.md  core-conventions-scala.md  core-conventions-shell.md  core-conventions-sql.md  core-conventions-swift.md  core-conventions-terraform.md  core-conventions-ts.md  core-conventions.md  (+15 more)
promptcli/questions/: __init__.py  language.py  question_pipelines.yaml
promptcli/ui/: __init__.py  _factory.py  _selector.py
promptosaurus/: PROMPTOSAURUS.md  __init__.py  artifacts.py  cli.py  cli_utils.py  config_handler.py  config_options.py  registry.py
promptosaurus/builders/: BUILDERS.md  __init__.py  builder.py  cline.py  config.py  copilot.py  cursor.py  ignore_generator.py  kilo.py  kilo_cli.py  kilo_ide.py  utils.py
promptosaurus/prompts/: architect-data-model.md  architect-scaffold.md  architect-task-breakdown.md  ask-decision-log.md  ask-docs.md  code-boilerplate.md  code-dependency-upgrade.md  code-feature.md  code-house-style.md  code-migration.md  code-refactor.md  coding-enforcement.md  core-conventions-c.md  core-conventions-clojure.md  core-conventions-cpp.md  core-conventions-cs.md  (+45 more)
tests/: __init__.py  conftest.py
(+249 files in other folders)
